--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" data-theme="light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Summer Sale</title>
-</head>
-<body>
-    
-</body>
+    <!-- Work Sans Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Daisy ui with tailwind css -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      body {
+        font-family: "Work Sans", sans-serif;
+      }
+    </style>
+  </head>
+  <body>
+    <header class="bg-[#F9F6E2]">
+      <div class="flex flex-col md:flex-row lg:flex-row md:justify-center md:items-center lg:px-60 gap-7">
+        <div class="text-center">
+          <h2 class="text-xl lg:text-3xl font-medium mt-5 mb-4 md:mb-11">---SALE FEVER---</h2>
+          <h1 class="text-3xl lg:text-6xl font-bold mb-6 md:mb-14">Purchase TK 200 or <br>above & get <span class="text-[#E527B2;]">20% off</span></h1>
+          <p class="text-xl lg:text-2xl font-medium">Use Promo Code <button class="btn btn-secondary">SELL200</button></p>
+        </div>
+        <div>
+          <img class="" src="./images/Summer 1.png" alt="flower" />
+        </div>
+      </div>
+    </header>
+    <main>
+      <section></section>
+    </main>
+  </body>
 </html>
