--- a/index.html
+++ b/index.html
@@ -26,11 +26,20 @@
   </head>
   <body>
     <header class="bg-[#F9F6E2]">
-      <div class="flex flex-col md:flex-row lg:flex-row md:justify-center md:items-center lg:px-60 gap-7">
+      <div
+        class="flex flex-col md:flex-row lg:flex-row md:justify-center md:items-center lg:px-60 gap-7"
+      >
         <div class="text-center">
-          <h2 class="text-xl lg:text-3xl font-medium mt-5 mb-4 md:mb-11">---SALE FEVER---</h2>
-          <h1 class="text-3xl lg:text-6xl font-bold mb-6 md:mb-14">Purchase TK 200 or <br>above & get <span class="text-[#E527B2;]">20% off</span></h1>
-          <p class="text-xl lg:text-2xl font-medium">Use Promo Code <button class="btn btn-secondary">SELL200</button></p>
+          <h2 class="text-xl lg:text-3xl font-medium mt-5 mb-4 md:mb-11">
+            ---SALE FEVER---
+          </h2>
+          <h1 class="text-3xl lg:text-6xl font-bold mb-6 md:mb-14">
+            Purchase TK 200 or <br />above & get
+            <span class="text-[#E527B2;]">20% off</span>
+          </h1>
+          <p class="text-xl lg:text-2xl font-medium">
+            Use Promo Code <button class="btn btn-secondary">SELL200</button>
+          </p>
         </div>
         <div>
           <img class="" src="./images/Summer 1.png" alt="flower" />
@@ -38,7 +47,190 @@
       </div>
     </header>
     <main>
-      <section></section>
+      <section class="container flex flex-col lg:flex-row gap-6 mt-5 lg:mt-28 mx-auto">
+        <!-- card section -->
+        <div>
+          <h3 class="text-3xl font-semibold mb-8">Kitchenware</h3>
+          <!-- cards -->
+          <div class="flex flex-col md:flex-row gap-6">
+            <!-- card1 -->
+            <div class="card md:w-96 bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <div class="bg-gray-200 w-full h-40 flex justify-center items-center">
+                    <img
+                  src="./images/prod1.png"
+                  alt="product1"
+                  class="rounded-xl mx-auto"
+                />
+                </div>
+              </figure>
+              <div class="card-body items-center text-center">
+                <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                <h2 class="card-title text-xl font-semibold">K. Accessories</h2>
+                <p class="text-xl font-normal text-[#11111180]">39.00 TK</p>
+              </div>
+            </div>
+            <!-- card2 -->
+            <div class="card md:w-96 bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <div class="bg-gray-200 w-full h-40 flex justify-center items-center">
+                    <img
+                  src="./images/prod2.png"
+                  alt="product1"
+                  class="rounded-xl mx-auto"
+                />
+                </div>
+              </figure>
+              <div class="card-body items-center text-center">
+                <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                <h2 class="card-title text-xl font-semibold">K. Accessories</h2>
+                <p class="text-xl font-normal text-[#11111180]">25.00 TK</p>
+              </div>
+            </div>
+            <!-- card3 -->
+            <div class="card md:w-96 bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <div class="bg-gray-200 w-full h-40 flex justify-center items-center">
+                    <img
+                  src="./images/prod3.png"
+                  alt="product1"
+                  class="rounded-xl mx-auto"
+                />
+                </div>
+              </figure>
+              <div class="card-body items-center text-center">
+                <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                <h2 class="card-title text-xl font-semibold">Home Cooker</h2>
+                <p class="text-xl font-normal text-[#11111180]">49.00 TK</p>
+              </div>
+            </div>
+          </div>
+          <!-- cards next-->
+          <h3 class="text-3xl font-semibold mt-10 mb-8">Sportswear</h3>
+          <!-- cards -->
+          <div class="flex flex-col md:flex-row gap-6">
+            <!-- card1 -->
+            <div class="card md:w-96 bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <div class="bg-gray-200 w-full h-40 flex justify-center items-center">
+                    <img
+                  src="./images/prod4.png"
+                  alt="product1"
+                  class="rounded-xl mx-auto"
+                />
+                </div>
+              </figure>
+              <div class="card-body items-center text-center">
+                <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                <h2 class="card-title text-xl font-semibold">Sports Back Cap</h2>
+                <p class="text-xl font-normal text-[#11111180]">49.00 TK</p>
+              </div>
+            </div>
+            <!-- card2 -->
+            <div class="card md:w-96 bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <div class="bg-gray-200 w-full h-40 flex justify-center items-center">
+                    <img
+                  src="./images/prod5.png"
+                  alt="product1"
+                  class="rounded-xl mx-auto"
+                />
+                </div>
+              </figure>
+              <div class="card-body items-center text-center">
+                <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                <h2 class="card-title text-xl font-semibold">Full Jersey Set</h2>
+                <p class="text-xl font-normal text-[#11111180]">69.00 TK</p>
+              </div>
+            </div>
+            <!-- card3 -->
+            <div class="card md:w-96 bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <div class="bg-gray-200 w-full h-40 flex justify-center items-center">
+                    <img
+                  src="./images/prod6.png"
+                  alt="product1"
+                  class="rounded-xl mx-auto"
+                />
+                </div>
+              </figure>
+              <div class="card-body items-center text-center">
+                <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                <h2 class="card-title text-xl font-semibold">Sports cates</h2>
+                <p class="text-xl font-normal text-[#11111180]">159.00 TK</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- cart section -->
+    <div>
+        <!-- first card -->
+        <div class="card bg-base-100 shadow-lg mt-10 lg:mt-24 mb-6">
+            <div class="card-body">
+                <div>
+                    <h3>Have coupon?</h3>
+                    <div class="form-control">
+                        <div class="input-group">
+                          <input type="text" placeholder="Coupon code" class="input input-bordered" />
+                          <button class="btn btn-disabled">Apply
+                          </button>
+                        </div>
+                      </div>
+                </div>
+              </div>
+          </div>
+          <!-- second card for calculation -->
+          <div class="card lg:w-96 bg-base-100 shadow-xl">
+            <div class="card-body mx-auto">  
+              <p class="text-2xl font-medium"></p>
+              <hr class="border w-full">
+              <p class="text-2xl font-medium">Total Price:00</p>
+              <p class="text-2xl font-medium">Discount:00</p>
+              <p class="text-2xl font-medium">Total:00</p>
+              <hr class="border w-full">
+              <div class="card-actions justify-center">
+                <button class="btn btn-disabled">Make Purchase</button>
+              </div>
+            </div>
+          </div>
+    </div>
+      </section>
     </main>
   </body>
 </html>
