--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
     </header>
     <main>
-      <section class="container flex flex-col lg:flex-row gap-6 mt-5 lg:mt-28 mx-auto">
+      <section class="container flex flex-col lg:flex-row gap-6 mt-5 lg:mt-28 mx-auto lg:mb-64">
         <!-- card section -->
         <div>
           <h3 class="text-3xl font-semibold mb-8">Kitchenware</h3>
@@ -199,12 +199,12 @@
           </div>
         </div>
         <!-- cart section -->
-    <div>
+    <div class="">
         <!-- first card -->
         <div class="card bg-base-100 shadow-lg mt-10 lg:mt-24 mb-6">
-            <div class="card-body">
-                <div>
-                    <h3>Have coupon?</h3>
+            <div class="card-body p-2 md:p-8">
+                <div class="flex flex-col justify-center items-center lg:flex-none">
+                    <h3 class="mb-4">Have coupon?</h3>
                     <div class="form-control">
                         <div class="input-group">
                           <input type="text" placeholder="Coupon code" class="input input-bordered" />
