--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./images/download.png" type="image/x-icon">
     <!-- Daisy ui with tailwind css -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css"
