--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </h1>
           <p class="text-xl lg:text-2xl font-medium">
             Use Promo Code
-            <button class="btn btn-secondary text-white border:none">
+            <button class="btn btn-secondary text-white border:none md:text-2xl font-semibold">
               SELL200
             </button>
           </p>
@@ -388,7 +388,7 @@
         <!-- cart section -->
         <div class="flex flex-col md:flex-row md:gap-4 lg:flex-col md:mx-auto lg:mx-0">
           <!-- coupon card -->
-          <div class="card bg-base-100 shadow-lg mt-10 lg:mt-24 mb-6">
+          <div class="card bg-base-100 shadow-xl mt-10 lg:mt-24 mb-6">
             <div class="card-body p-2 md:p-8">
               <div
                 class="flex flex-col justify-center items-center lg:flex-none"
@@ -411,7 +411,7 @@
             </div>
           </div>
           <!-- calculation card -->
-          <div class="card lg:w-96 bg-base-100 shadow-xl">
+          <div class="card lg:w-96 bg-base-100 shadow-2xl">
             <div class="card-body mx-auto">
               <div class="text-2xl font-medium" id="product-list"></div>
               <hr class="border w-full" />
@@ -431,12 +431,12 @@
               </button>
               <dialog
                 id="my_modal_5"
-                class="modal modal-bottom sm:modal-middle"
+                class="modal modal-bottom sm:modal-middle w-3/4 md:w-full mx-auto"
               >
-                <form method="dialog" class="modal-box flex flex-col justify-center items-center">
-                  <img src="./images/congo.png" alt="" class="w-2/4">
-                  <h3 class="font-bold text-5xl">Congratulations</h3>
-                  <p class="py-4 text-xl font-normal text-[#11111180]">
+                <form method="dialog" class="modal-box flex flex-col justify-center items-center p-6 md:p-0 lg:p-6">
+                  <img src="./images/congo.png" alt="" class="w-2/4 ">
+                  <h3 class="font-bold text-2xl md:text-5xl">Congratulations</h3>
+                  <p class="py-4 text-sm md:text-xl font-normal text-[#11111180]">
                     Your Purchase the product
                   </p>
                   <div class="modal-action">
