--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                   </p>
                   <div class="modal-action">
                     <!-- if there is a button in form, it will close the modal -->
-                    <button class="btn text-white bg-[#E527B2]" id="go-home" onclick="window.location.reload();">Go Home</button>
+                    <button class="btn text-white bg-[#E527B2]" id="go-home" onclick="window.location.reload(); window.scrollTo(0, 0);">Go Home</button>
                   </div>
                 </form>
               </dialog>
